[package]
name = "arcanum"
version = "0.1.0"
authors = ["Nikhil Jha <mail@nikhiljha.com>"]
edition = "2021"
default-run = "arcanum"
license = "Apache-2.0"

[[bin]]
name = "arcanum"
path = "src/main.rs"

[[bin]]
name = "arcanum-crdgen"
path = "src/crdgen.rs"

[[bin]]
name = "arcanum-seal"
path = "src/sealer.rs"

[lib]
name = "arcanum"
path = "src/lib.rs"

[features]
default = []
telemetry = ["tonic", "opentelemetry-otlp"]

[dependencies]
actix-web = "4.0.0-beta.11"
futures = "0.3.17"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.13.1", features = ["v1_22"], default-features=false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.29"
schemars = { version = "0.8.7", features = ["chrono"] }
serde_yaml = "0.8.21"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.1", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.16.0"
opentelemetry = { version = "0.16.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.9.0", features = ["tokio"], optional = true }
prometheus = "0.13.0"
# Can't upgrade this until opentelemetry-otlp upgrades it
tonic = { version = "0.5.2", optional = true }
hashicorp_vault = "2.1.0"
ed25519-dalek = "1.0.1"
confy = "0.4.0"
base64 = "0.13.0"
crypto_box = "0.7.0"
ecies-ed25519 = "0.5.1"
rand_core = "0.5.1"
rand = "0.8.4"

# exemplar support (broken atm)
#prometheus = { git = "https://github.com/clux/rust-prometheus.git", rev = "c9f7ea9652e27cd2d872937c5efbe72f20db0d5e" }
#prometheus = { path = "../rust-prometheus" }

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.64.0"
